Bug 427472 - Kicker sysactions show favorites
Summary: Kicker sysactions show favorites
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Debian stable Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-09 02:37 UTC by Leszek Lesner
Modified: 2020-10-09 04:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot example with kicker (44.05 KB, image/jpeg)
2020-10-09 02:37 UTC, Leszek Lesner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leszek Lesner 2020-10-09 02:37:11 UTC
Created attachment 132229 [details]
Screenshot example with kicker

SUMMARY
Instead of sysactions I get favorites in the sysaction area

STEPS TO REPRODUCE
1. Open Kicker
2. Look at sysactions

OBSERVED RESULT
Instead of sysactions I get favorites

EXPECTED RESULT
It should show sysactions

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: master git (09 Oct 2020)
KDE Frameworks Version: 5.75
Qt Version: 5.15.1

ADDITIONAL INFORMATION
Reverting this commit fixes the issue: 
https://invent.kde.org/plasma/plasma-workspace/-/commit/fcdbbda3965d73900c415071ad882f550994fdc2
Comment 1 Eike Hein 2020-10-09 03:36:18 UTC
I'll have a look on Friday.
Comment 2 Bug Janitor Service 2020-10-09 03:48:15 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/341
Comment 3 Eike Hein 2020-10-09 03:56:28 UTC
Git commit 6139c3bae9cc7188d93fb8bd66f0b9a1d7ba2127 by Eike Hein.
Committed on 09/10/2020 at 03:45.
Pushed by cblack into branch 'master'.

[kicker] Add back mistakenly removed favorites model

The system actions model needs its own favorites model.

Accidentally removed in fcdbbda3965d.

M  +2    -0    applets/kicker/plugin/systemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/6139c3bae9cc7188d93fb8bd66f0b9a1d7ba2127
Comment 4 Nate Graham 2020-10-09 04:01:08 UTC
Git commit 59f7913977dc9604305f2a4c58da3482dba68f7f by Nate Graham, on behalf of Eike Hein.
Committed on 09/10/2020 at 04:01.
Pushed by ngraham into branch 'Plasma/5.20'.

[kicker] Add back mistakenly removed favorites model

The system actions model needs its own favorites model.

Accidentally removed in fcdbbda3965d.


(cherry picked from commit 6139c3bae9cc7188d93fb8bd66f0b9a1d7ba2127)

M  +2    -0    applets/kicker/plugin/systemmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/59f7913977dc9604305f2a4c58da3482dba68f7f