[kicker] Add back mistakenly removed favorites model

The system actions model needs its own favorites model.

Accidentally removed in fcdbbda3965d.

BUG:427472


(cherry picked from commit 6139c3bae9cc7188d93fb8bd66f0b9a1d7ba2127)